[project]
name = "dealer-parser"
version = "0.1.0"
description = "Парсер сайтов автодилеров по бренду"
authors = ["Твоё Имя <email@example.com>"]
requires-python = ">=3.10"

dependencies = [
    "requests",
    "beautifulsoup4",
    "fake-useragent",
    "duckduckgo-search"
]

[tool.uv]
dependencies = [
    "pytest>=6.2",
    "coverage>=5.5",
    "pytest-cov>=2.12"
]