[project]
name = "dealer_parser"
version = "0.1.0"
description = "Parser for car dealership information"
authors = [{ name = "Pavel Anikin" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "beautifulsoup4",
    "fake-useragent",
    "duckduckgo-search"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dealer_parser"]
